- iphone 11 get the black screen. issue fixed - make document of look into that ionic pipeline build - hide eye icon in mobile - on fox token page  -- the "token" and "name" overlap issue fixed - iphone header logo 2 line fixed

--- a/src/components/nav/Header.scss
+++ b/src/components/nav/Header.scss
@@ -2,6 +2,7 @@
     white-space: 'nowrap';
     overflow: 'hidden';
     text-overflow: 'ellipsis';
+    width: 150px;
     font-size: 20px;
 }
 .logo-height {
